Further Refactorings