@@ -23,19 +23,26 @@ import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
 
 public abstract class AbstractRegressionTestCommon extends AbstractRegressionTest9 {
 
-	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("--enable-preview -source 26");
 	private String extraLibPath;
 
 	public AbstractRegressionTestCommon(String name) {
 		super(name);
 	}
 
-	protected Map<String, String> getCompilerOptions(boolean preview, String version) {
-		Map<String, String> defaultOptions = getCompilerOptions();
-		defaultOptions.put(CompilerOptions.OPTION_Compliance, version);
-		defaultOptions.put(CompilerOptions.OPTION_Source, version);
-		defaultOptions.put(CompilerOptions.OPTION_TargetPlatform, version);
-		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, preview ? CompilerOptions.ENABLED : CompilerOptions.DISABLED);
+	/**
+	 * Javac options for these preview tests, derived from the compliance level configured
+	 * by the (minimal) compliance test suite, so the source/target stays in sync with ecj.
+	 */
+	protected JavacTestOptions getPreviewJavacTestOptions() {
+		return JavacTestOptions.forReleaseWithPreview(CompilerOptions.versionFromJdkLevel(this.complianceLevel));
+	}
+
+	@Override
+	protected Map<String, String> getCompilerOptions() {
+		// Compliance/Source/Target are driven by the (minimal) compliance test suite setup.
+		// Here we only enable preview, which is the constant requirement of these tests.
+		Map<String, String> defaultOptions = super.getCompilerOptions();
+		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.ENABLED);
 		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.WARNING);
 		return defaultOptions;
 	}
@@ -66,11 +73,11 @@ public abstract class AbstractRegressionTestCommon extends AbstractRegressionTes
 	}
 
 	protected void runNegativeTest(String[] testFiles, String expectedCompilerLog) {
-		Map<String, String> customOptions = getCompilerOptions(true, CompilerOptions.VERSION_26);
+		Map<String, String> customOptions = getCompilerOptions();
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
-		runner.javacTestOptions = JAVAC_OPTIONS;
+		runner.javacTestOptions = getPreviewJavacTestOptions();
 		runner.customOptions = customOptions;
 		runner.expectedJavacOutputString = null;
 		runner.runNegativeTest();
